data/derived/sp14/progs/unify/prog3449.ml.out
Characters 22-42:
  let _ = buildAverage (eval(VarX, 2.0, 4.0), eval(VarY, 2.0, 4.0));;
                        ^^^^^^^^^^^^^^^^^^^^
Error: This expression has type float but an expression was expected of type
         expr
